--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,17 @@
+
 N8N_WEBHOOK_URL=https://web-analytics.app.n8n.cloud/webhook-test/a836cf09-54a6-4d78-97c5-dfb04569c748
+
+
+API_BASE_URL=https://555d-2601-2c1-8a82-7b0-9454-8097-5e91-652.ngrok-free.app
+
+
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_DB=0
+
+
+QUEUE_NAME=analytics
+TASK_TIMEOUT=600
+
+
+CORS_ORIGINS=http://localhost:3000,http://127.0.0.1:3000
